	  unneeded test for n's being less than zero (since it's already
	  been tested for being greater than zero or equal to zero at
	  that point) from nstrnicmp(). (DLR)
  stristr()
	- Rename to nstristr() to avoid a potential conflict with an
	  existing stristr() function, and move up to just after
	  nstrnicmp(). (DLR)  David Benbennick: Tweak for efficiency.

GNU nano 1.3.2 - 2004.03.31
- General:
	- Change instances in the code that refresh the entire edit
	  window when color support is enabled (in order to properly
	  handle multi-line color regexes) to only do so when
	  it's necessary, i.e, when COLOR_SYNTAX is set. (DLR)
	- Minor cosmetic tweaks to the code involving direction keys.
	  NANO_UP_KEY and NANO_DOWN_KEY are now NANO_PREVLINE_KEY and
	  NANO_NEXTLINE_KEY, and the help messages for them have been
	  changed accordingly.  Also remove extraneous references to
	  NANO_DOWN_KEY in the search history shortcut entries. (DLR)
	- Add NANO_UNJUSTIFY_FKEY (the same as NANO_UNCUT_FKEY) to the
	  shortcut list, and tweak the unjustify routine to use it.
	  Also add NANO_FIRSTLINE_FKEY and NANO_LASTLINE_FKEY, and tweak
	  the statusbar input routines to handle them and NANO_HELP_FKEY
	  properly. (DLR)
	- Block SIGWINCH after setting up its handler, and only unblock
	  and handle it when we're in a stable state, i.e, when we're
	  waiting for input from the user.  New function
	  allow_pending_sigwinch(); changes to signal_init(),
	  get_kbinput(), and get_verbatim_kbinput(). (DLR)
	- Decouple the paragraph searching code and the justifying code.
	  Removed function do_para_operation(); new function
	  do_para_search(); changes to do_justify(). (DLR)
	- Add -E/--backupdir option.  When used with -B/--backup, backup
	  files will be saved in the specified directory with their
	  canonical pathnames encoded in their names (all '/'s replaced
	  with '!'s).  Changes to write_file(). (Martin Ehmsen)  DLR:
	  Add function init_backup_dir() to handle relative paths