@@ -27,6 +27,11 @@ CVS code -
 	- Rename to nstristr() to avoid a potential conflict with an
 	  existing stristr() function, and move up to just after
 	  nstrnicmp(). (DLR)  David Benbennick: Tweak for efficiency.
+- winio.c:
+  get_verbatim_kbinput()
+	- Refactor the output in the DEBUG #ifdef.  It didn't work
+	  properly ever since this function was changed to use an int*
+	  instead of a char*. (DLR)
 
 GNU nano 1.3.2 - 2004.03.31
 - General:
